# tree-sitter-qmljs

./: Cargo.toml  grammar.js  package-lock.json  package.json  setup.py  tree-sitter.json
bindings/rust/: build.rs  lib.rs
examples/: Makefile  known-failures.txt
test/corpus/: declarative-ui.txt
