[package]
name = "tree-sitter-qmljs"
description = "QML grammar for the tree-sitter parsing library"
version = "0.2.0"
authors = ["Yuya Nishihara"]
readme = "README.md"
keywords = ["incremental", "parsing", "qml", "tree-sitter"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/yuja/tree-sitter-qmljs"
edition = "2021"
license = "MIT"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "LICENSE",
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.6"
